--- a/html/HTML5Application/public_html/css/lab7.css
+++ b/html/HTML5Application/public_html/css/lab7.css
@@ -8,17 +8,19 @@ and open the template in the editor.
     Author     : student
 */
 
-*{
+* {
     margin: 0;
     padding: 0;
 }
-div0{
+
+#div0 {
     width: 500px;
     height: 100px;
     padding: 20px;
 
 }
-#div1{
+
+#div1 {
     float: left;
     overflow-y: scroll;
     margin: 10px;
@@ -26,63 +28,72 @@ div0{
     opacity: 1;
     width: 400px;
     height: 400px;
-    background-color: rgba(255,255,0,1);
+    background-color: rgba(255, 255, 0, 1);
 }
-#div11{
+
+#div11 {
 
     width: 100px;
     height: 100px;
     background-color: red;
 }
-#div12{
+
+#div12 {
 
     width: 90px;
     height: 90px;
     background-color: green;
 }
-#div2{
-    
+
+#div2 {
+
     float: left;
     clear: left;
     margin: 10px;
-    display:block;
+    display: block;
     visibility: visible;
     width: 400px;
     height: 400px;
-    background-color: green; 
+    background-color: green;
 }
-#div3{
+
+#div3 {
     float: left;
     clear: left;
     margin: 10px;
-    display:block;
+    display: block;
     overflow: hidden;
     width: 400px;
     height: 400px;
-    background-color: blue; 
+    background-color: blue;
 }
-.center{
-    width: 100%;
-}
-.p1{
+
+
+p {
+    width: 300px;
+    height: 100px;
     margin: 10px;
+    border: 2px solid black;
+}
+
+.p1 {
     float: left;
 }
-.p2{
-  
-    margin: 10px;
-    float: right;
-}
-.p3{
-    clear: both;
-    text-align: center;
-}
-.p4{
-    margin: 10px;
-    float: left;
-}
-.p5{
-  margin: 10px;
+
+.p2 {
     float: right;
 }
 
+.p3 {
+    clear: both;
+    margin: 10px auto;
+}
+
+.p4 {
+    float: left;
+}
+
+.p5 {
+
+    float: right;
+}
