--- a/html/HTML5Application/public_html/css/lab8.css
+++ b/html/HTML5Application/public_html/css/lab8.css
@@ -7,55 +7,70 @@ and open the template in the editor.
     Created on : 2018-12-02, 17:15:00
     Author     : student
 */
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-.wraper{
+.wraper {
     width: 1024px;
     height: 100%;
     margin: 0 auto;
 }
-.clerfix::after{
+
+.clerfix::after {
     display: block;
     content: "";
     clear: both;
 }
-h1{
+
+h1 {
     text-align: center;
-    height: 100px
+    height: 50px;
+    line-height: 50px;
+    border: 2px solid black;
 }
-h2{
+
+h2 {
     text-align: center;
-    height: 80px;
+    line-height: 40px;
+    border: 2px solid black;
+    height: 40px;
     margin: 50px;
 }
-ul{
- width: 90%;
- margin: 0 auto;
+
+ul {
+    width: 90%;
+    margin: 0 auto 10px auto;
 }
-li{
+
+li {
     list-style: none;
     float: left;
-    padding: 0px 95px;
+
     border: 2px solid black;
 }
-aside{
-    float: right;
+
+a {
+    padding: 0px 95px;
 }
-footer{
+
+footer {
     width: 100%;
     text-align: center;
+    margin-top: 10px;
     border: 2px solid black;
-        
+
 }
-aside{
+
+aside {
+    float: right;
     width: 20%;
     height: 30%;
     border: 2px solid black;
 }
-article{
-    width: 100%;
+
+article {
+    width: 79%;
     border: 2px solid black;
 }
