--- a/html/cv/HTML5Application1/public_html/style.css
+++ b/html/cv/HTML5Application1/public_html/style.css
@@ -4,14 +4,22 @@
 }
 
 html {
-    font-family: oswald;
+    font-family: 'Saira Condensed',
+        sans-serif;
     font-size: 10px;
+}
+
+.clearfix::after {
+    content: "";
+    display: block;
+    clear: both;
 }
 
 .wrapper {
     max-width: 1920px;
     margin: 0 auto;
     transition: .3s linear;
+    overflow: hidden;
 }
 
 header {
@@ -96,11 +104,19 @@ img.gray {
     }
 }
 
-@media (min-width: 375px) and (orientation: portrait) {
+@media (min-width: 375px) and (min-height:812px) {
     img.gray {
         bottom: -11%;
-        left: -110%;
+        left: -90%;
         height: 110%;
+    }
+
+    .text h1 {
+        font-size: 5rem;
+    }
+
+    .text h2 {
+        font-size: 3rem;
     }
 }
 
@@ -159,9 +175,6 @@ img.gray {
     }
 
 }
-
-
-
 
 @media (min-width: 1024px) {
     .text h1 {
@@ -350,13 +363,13 @@ aside.show {
 }
 
 aside ul {
-    list-style: none;
     margin: 55% 20%;
     font-size: 24px;
     letter-spacing: 3px;
 }
 
 aside li {
+    list-style: none;
     padding: 4px;
 }
 
@@ -368,72 +381,353 @@ aside li:hover {
 /* sekcja omnie */
 
 main {
-    display: flex;
-    flex-direction: column;
-}
-
-section {
-    margin: 15px;
-    text-align: justify;
-    text-transform: uppercase;
-    background-color: #eee;
-    color: black;
+    background-color: black;
 }
 
 section h1 {
     padding: 10px;
-    text-align: center;
+    text-align: left;
     font-size: 25px;
     letter-spacing: 2px;
+    border-bottom: 2px white solid;
 }
 
 section h2 {
     padding: 7px;
 }
 
-section .fas {
-    display: inline-block;
-    margin: 10px;
+.web img {
+    display: block;
+    width: 100%;
 }
 
+.aboutMe .about {
+    background-color: #ff4f2c;
+    color: white;
+}
+
+.about td {
+    border-bottom: 1px white solid;
+}
+
+.education,
+.skills,
 .aboutMe {
-    box-shadow: 2px 2px 9px 5px rgba(0, 0, 0, 0.75);
-
+    padding-top: 20px;
 }
 
-.education {
-    box-shadow: 2px 2px 9px 5px rgba(0, 0, 0, 0.75);
+.education img {
+    width: 100%;
+}
+
+.education .about {
+    background-color: #29a6dc;
+    color: white;
 }
 
 .education ul {
-    list-style: none;
+    padding-left: 20px;
+}
+
+.about li {
+    list-style: circle;
 }
 
 .skills {
-    box-shadow: 2px 2px 9px 5px rgba(0, 0, 0, 0.75);
+    padding-bottom: 20px;
 }
 
-.skills h2 {
+.skills img {
     width: 100%;
-    text-align: center;
 }
 
-
-.htmlBar {
-    width: 90vw;
-    margin: 0 auto;
-    height: 20px;
-    border: 1px solid black;
-    border-radius: 8%;
+.skills .about {
+    background-color: #ff4f2c;
+    color: white;
 }
 
-.htmlBarColor {
+.container {
+    width: 90%;
+    /* Full width */
+    background-color: #ddd;
+    /* Grey background */
+    border: 2px solid black;
+    border-radius: 20px;
+}
+
+.skill {
+    text-align: right;
+    /* Right-align text */
+    padding: 5px;
+    /* Add some padding */
+    border-radius: 20px;
+    font-size: 1.1rem;
+
+}
+
+.html {
+    width: 90%;
+    background-color: #4CAF50;
+}
+
+/* Green */
+.css {
     width: 80%;
-    height: 100%;
-    background-color: green;
+    background-color: #2196F3;
 }
 
-.section p {
-    width: 100%;
+/* Blue */
+.js {
+    width: 65%;
+    background-color: #f44336;
+}
+
+.skills h3 {
+    font-size: 1.5rem;
+}
+
+
+.skills li {
+    font-size: 1.3rem;
+}
+
+.skills li::before {
+    content: ">";
+}
+
+.slogan {
     text-align: center;
+    background-image: url(img/motto.jpg);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    color: white;
+    text-align: center;
+}
+
+.slogan h1 {
+    text-align: center;
+    font-size: 26px;
+    text-transform: uppercase;
+    margin-bottom: 25px;
+
+}
+
+.slogan p {
+    font-size: 18px;
+}
+
+.slogan p.author {
+    margin-top: 20px;
+    font-size: 12px;
+}
+
+.slogan .bg {
+    padding: 30px 10px;
+    background-color: rgba(0, 63, 114, 0.5);
+}
+
+@media (orientation: landscape) {
+    .slogan p {
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media (min-width: 768px) {
+
+    .slogan .bg {
+        padding: 50px 10px;
+
+    }
+
+    .slogan h1 {
+        font-size: 48px;
+        margin-bottom: 35px;
+
+    }
+
+    .slogan p {
+        font-size: 26px;
+        width: 60%;
+        margin: 0 auto;
+    }
+
+    .slogan p.author {
+        margin-top: 40px;
+        font-size: 18px;
+    }
+}
+
+@media (min-width: 1024px) {
+
+    .slogan .bg {
+        padding: 80px 10px;
+
+    }
+
+    .slogan h1 {
+        font-size: 60px;
+        margin-bottom: 55px;
+
+    }
+
+    .slogan p {
+        font-size: 40px;
+        width: 50%;
+    }
+
+    .slogan p.author {
+        margin-top: 40px;
+        font-size: 26px;
+    }
+}
+
+.contact {
+    background-color: #000;
+    color: white;
+    padding: 30px 20px;
+    margin-bottom: 0;
+
+}
+
+.contact h1 {
+    border: none;
+}
+
+.contact h1 {
+    font-size: 26px;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+    color: white;
+    text-align: center;
+}
+
+.contact .wrap {
+    padding-top: 20px;
+    max-width: 1024px;
+    margin: 0 auto;
+}
+
+.contact input,
+.contact button,
+.contact textarea {
+    width: 100%;
+    margin-bottom: 25px;
+    font-size: 14px;
+}
+
+.contact input {
+
+    height: 36px;
+
+}
+
+.contact textarea {
+    height: 120px
+}
+
+.contact button {
+    font-size: 14px;
+    line-height: 40px;
+    background-color: black;
+    color: white;
+    border: 2px solid white;
+}
+
+.contact .socials {
+    padding-top: 30px;
+    font-size: 0;
+}
+
+.contact .social {
+
+    padding: 10px 0;
+    color: white;
+
+}
+
+.contact .social img {
+    float: left;
+
+}
+
+.contact .social span {
+    line-height: 72px;
+    padding-left: 20px;
+    float: left;
+    font-size: 20px;
+}
+
+@media (min-width: 533px) {
+    .contact .social {
+        display: inline-block;
+        width: 50%;
+    }
+}
+
+@media (min-width: 1024px) {
+
+    .contact h1 {
+        font-size: 60px;
+        padding: 30px 0;
+    }
+
+    .contact form,
+    .contact .socials {
+        float: left;
+        width: 50%;
+    }
+
+    .contact .socials {
+        padding: 0+;
+    }
+
+    .contact .social {
+        display: block;
+        width: 50%;
+        margin: 0 auto;
+    }
+
+    .contact input,
+    .contact button,
+    .contact textarea {
+        margin-bottom: 35px;
+
+    }
+
+    .contact input {
+
+        height: 46px;
+        font-size: 24px;
+
+    }
+
+    .contact textarea {
+        height: 180px;
+        font-size: 24px;
+    }
+
+    .contact button {
+        font-size: 20px;
+        line-height: 50px;
+        transition: .3s;
+        cursor: pointer;
+
+    }
+
+    .contact button:hover {
+        color: black;
+        background-color: #fff;
+    }
+}
+
+footer {
+    width: 100vw;
+    background-color: #ccc;
+    text-align: center;
+    text-align: center;
+    padding: 20px 0;
+    font-size: 20px;
 }
